...
                )
            )
            FilledIconButton(
                onClick = { onValueChange((value - 1).coerceAtLeast(minValue)) },
                modifier = Modifier
                    .size(44.dp)
                    .semantics { contentDescription = "Decrease" },
                shape = MaterialTheme.shapes.small,
                colors = IconButtonDefaults.filledIconButtonColors(
                    containerColor = MaterialTheme.colorScheme.primaryContainer,
                    contentColor = MaterialTheme.colorScheme.onPrimaryContainer
                )
            ) {
...
